# beagle

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
beagle/: __init__.py  cli.py  workspace.py
beagle/benchmarks/: __init__.py  fixture.py  gold.py  metrics.py  press_cases.json  report.py  runner.py
beagle/bridge/: __init__.py  cli.py  client.py  local_repo.py  mcp_server.py  session.py  token_store.py
beagle/card/: __init__.py  builder.py  classify.py  mermaid.py  model.py  render.py
beagle/context/: __init__.py  compiler.py
beagle/database/: __init__.py  connection.py  migrations.py  repository.py
beagle/discovery/: __init__.py  scanner.py
beagle/explain/: __init__.py  explainer.py  flow.py  mermaid.py
beagle/extractors/: __init__.py  chunker.py  pipeline.py
beagle/investigate/: __init__.py  investigator.py  issue.py  mermaid.py
design/: 01-product-overview.md  02-architecture.md  03-data-model.md  04-implementation-plan.md  05-benchmark-plan.md  06-claude-code-and-local-llm.md  07-issue-discovery-and-mermaid.md  08-frappe-document-lifecycle-policy.md  09-frappe-event-dispatch-resolution.md  10-lifecycle-validation-and-benchmarks.md  11-issue-investigation-and-context-compilation.md  12-function-context-and-mermaid-explanations.md  13-temporal-decision-and-change-memory.md  14-javascript-typescript-and-vue.md  15-shared-beagle-service.md
docs/: index.md  package-lock.json  package.json
docs/guide/: mcp.md  (+8 more)
tests/: conftest.py  test_foundation.py  test_mcp.py
(+134 files in other folders)
